ENHANCE: Update cmake for python install

--- a/tools/scripts/cmake/splashkit-python/CMakeLists.txt
+++ b/tools/scripts/cmake/splashkit-python/CMakeLists.txt
@@ -4,33 +4,25 @@
 cmake_minimum_required(VERSION 3.2)
 project(splashkit)
 
-# Detect Windows and flag MSYS
-if (WIN32 OR MSYS OR MINGW)
-  SET(MSYS "true")
-endif()
-
 # SK Directories relative to cmake project
 set(SK_ROOT "../../../..")
+set(SK_SRC "${SK_ROOT}/coresdk/src")
+set(SK_EXT "${SK_ROOT}/coresdk/external")
+set(SK_LIB "${SK_ROOT}/coresdk/lib")
 
 set(SK_GENERATED "${SK_ROOT}/generated")
+set(SK_BIN "${SK_ROOT}/bin")
 set(SK_OUT "${SK_ROOT}/out")
 
-# Setup OS specific flags
-if (APPLE)
-    set(SK_DEPLOY_ROOT "${SK_OUT}/splashkit-macos/commands/python3")
-elseif(MSYS)
-    set(SK_DEPLOY_ROOT "${SK_OUT}/splashkit-windows/commands/python3")
-else()
-    set(SK_DEPLOY_ROOT "${SK_OUT}/splashkit-linux/commands/python3")
-endif()
+set(SK_DEPLOY_ROOT "${SK_OUT}/skm")
 
 #### END SETUP ####
 
-# PASCAL FILES
+# C# FILES
 file(GLOB SK_ADAPTER_SOURCE_FILES
     "${SK_GENERATED}/python/*.py"
 )
 
 get_filename_component(SK_DEPLOY_ROOT ${SK_DEPLOY_ROOT} ABSOLUTE)
 
-install(FILES ${SK_ADAPTER_SOURCE_FILES} DESTINATION ${SK_DEPLOY_ROOT})
+install(FILES ${SK_ADAPTER_SOURCE_FILES} DESTINATION ${SK_DEPLOY_ROOT}/python3)
