CONFIG: Update cmake details for macos in C/C++

--- a/tools/scripts/cmake/splashkitcpp/CMakeLists.txt
+++ b/tools/scripts/cmake/splashkitcpp/CMakeLists.txt
@@ -42,7 +42,8 @@ if (WIN32 OR MSYS OR MINGW)
                    -L/usr/lib \
                  -lSplashKit")
 elseif (APPLE)
-    set(SK_OS_DEPLOY_PATH "${SK_OUT}/splashkit-macos")
+    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.5" CACHE STRING "Minimum OS X deployment version")
+    set(OS_PATH_SUFFIX "macos")
     # MAC OS PROJECT FLAGS
     set(LIB_FLAGS "-L${SK_OUT}/splashkit-macos/lib \
                    -llibSplashKit \
