CONFIG: Ensure that workflow uses recursive submodules

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -9,12 +9,14 @@ jobs:
         shell: msys2 {0}
         working-directory: projects/cmake
     steps:
-      - uses: actions/checkout@v2
       - uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW64
           update: true
           install: git make wget tar patch dos2unix diffutils ca-certificates mingw-w64-x86_64-ca-certificates mingw-w64-x86_64-gcc mingw-w64-x86_64-libpng cmake
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
       - name: Build
         working-directory: ./projects/cmake
         run: |
