--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -22,4 +22,4 @@ jobs:
           make -j 2
       - name: execute
         working-directory: ./bin
-        run: ./skunit_tests"
+        run: ./skunit_tests
