--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -18,10 +18,10 @@ jobs:
         run: ./skunit_tests
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.3.1 # Not needed with a .ruby-version file
+          ruby-version: 2.3.8 # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: translate
         working-directory: ./tools/translator
         run: |
           bundle install
-          bundle exec translate -v -i .
+          bundle exec translate -v -i ../../
