CONFIG: Add lstdc++fs to linux build

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -90,7 +90,8 @@ else()
                    -lfreetype \
                    -lcurl \
                    -lncurses \
-                   -ldl")
+                   -ldl \
+                   -lstdc++fs")
 endif()
 
 # FLAGS
