--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -11,7 +11,7 @@ jobs:
           sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev
           sudo apt-get install -y libflac-dev libwebp-dev libvorbis-dev libpng-dev
           sudo apt-get install -y libcurl4-openssl-dev libmikmod2-dev
-          sudo apt-get install -y libsdl2-dev libsdl2-gfx-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-net-dev libsdl2-ttf-dev
+          sudo apt-get install -y gcc-8 libsdl2-dev libsdl2-gfx-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-net-dev libsdl2-ttf-dev
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
