--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -18,7 +18,7 @@ jobs:
       - name: build
         working-directory: ./projects/cmake
         run: |
-          cmake .
+          CC=/usr/bin/gcc-8 CXX=/usr/bin/g++-8 cmake .
           CC=/usr/bin/gcc-8 CXX=/usr/bin/g++-8 make -j 2
       - name: execute
         working-directory: ./bin
