--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -24,8 +24,8 @@ jobs:
       - name: build
         working-directory: ./projects/cmake
         run: |
-          CC=/usr/bin/gcc-8 CXX=/usr/bin/g++-8 cmake .
-          CC=/usr/bin/gcc-8 CXX=/usr/bin/g++-8 make -j 2
+          CC=/usr/bin/gcc CXX=/usr/bin/g++ cmake .
+          CC=/usr/bin/gcc CXX=/usr/bin/g++ make -j 2
       - name: execute
         working-directory: ./bin
         run: ./skunit_tests
