--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -20,14 +20,14 @@ jobs:
           msystem: ${{ matrix.msystem }}
           path-type: inherit
           update: true
-          install: git make wget tar patch dos2unix diffutils ca-certificates mingw-w64-${{ matrix.arch }}-ca-certificates mingw-w64-${{ matrix.arch }}-gcc mingw-w64-${{ matrix.arch }}-libpng cmake
+          install: git make wget tar patch dos2unix diffutils ca-certificates mingw-w64-${{ matrix.arch }}-make mingw-w64-${{ matrix.arch }}-cmake mingw-w64-${{ matrix.arch }}-ca-certificates mingw-w64-${{ matrix.arch }}-gcc mingw-w64-${{ matrix.arch }}-libpng cmake
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
       - name: build
         working-directory: ./projects/cmake
         run: |
-          cmake .
+          cmake -G "Unix Makefiles" .
           make -j 2
       - name: execute
         working-directory: ./bin
