--- a/tools/scripts/nuget-pkg/SplashKitSDK.csproj
+++ b/tools/scripts/nuget-pkg/SplashKitSDK.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <RootNamespace>SplashKitSDK</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <PackageId>SplashKit</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.3</Version>
     <Authors>Andrew Cain</Authors>
     <Company>SplashKit</Company>
 
