--- a/tools/scripts/cmake/splashkitcpp/CMakeLists.txt
+++ b/tools/scripts/cmake/splashkitcpp/CMakeLists.txt
@@ -58,8 +58,7 @@ elseif (APPLE)
                    -framework AudioToolbox \
                    -framework CoreAudio \
                    -framework CoreVideo \
-                   -lcurl \
-                   -lncurses")
+                   -lcurl )
 else()
     # LINUX PROJECT FLAGS
     set(OS_PATH_SUFFIX "linux")
