Update SDL_mixer include dir
This change is to be commited alongside the changes in
splashkit-external

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -196,7 +196,7 @@ if (APPLE OR MSYS)
     include_directories("${SK_EXT}/SDL/include")
     include_directories("${SK_EXT}/SDL_gfx")
     include_directories("${SK_EXT}/SDL_image")
-    include_directories("${SK_EXT}/SDL_mixer")
+    include_directories("${SK_EXT}/SDL_mixer/include")
     include_directories("${SK_EXT}/SDL_net")
     include_directories("${SK_EXT}/SDL_ttf")
 endif()
