Revert "Remove windows prebuilt libraries"
This reverts commit 204750d08a43a7580d471a1e558d4adf8b44e427.

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -231,8 +231,8 @@ if (MSYS)
                                            SDL2
                                            SDL2_ttf
                                            libcurl
-                                           SDL2_gfx
-                                           libpng16
+                                           libSDL2_gfx-1-0-0
+                                           libpng16-16
                                            pthread
                                            stdc++
                                            ws2_32
