Manually build the deb
instead of using dpkg-deb. Therefore the deb can be built as long as
there's ar, tar and libxz installed

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ tools/scripts/test/obj
 
 ### Debian packaging ###
 tools/scripts/debian/libsplashkit-dev*
+tools/scripts/debian/data.tar.xz
+tools/scripts/debian/control.tar.xz
