Update CMakeLists.txt for existing SDL mixer headers

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -203,7 +203,7 @@ if (APPLE)
     include_directories("${SK_EXT}/SDL/include")
     include_directories("${SK_EXT}/SDL_gfx")
     include_directories("${SK_EXT}/SDL_image")
-    include_directories("${SK_EXT}/SDL_mixer/include")
+    include_directories("${SK_EXT}/SDL_mixer")
     include_directories("${SK_EXT}/SDL_net")
     include_directories("${SK_EXT}/SDL_ttf")
     include_directories("${SK_EXT}/SDL_image/external/libpng-1.6.2")
